--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "DISCORD_TOKEN": "MTIxMDQ4NTE0MTU1MDY2OTg2NA.G_-H2T.9XcmV9A4xFk8yoN0mfBCpf3Ut7gKVirQPxyC54",
+    "DISCORD_TOKEN": "MTIxMDQ4NTE0MTU1MDY2OTg2NA.G8yCh8.aF7Rj_KK3NCjsR-MTjMmrsKjTNDpvwStxpuHHY",
     "CLIENTSECRET": "-NsGhy8gyOcZhE9UHXuSC-Cvi5FkbjdX",
     "CLIENTID": "1210485141550669864",
     "BOTURL": "https://discord.com/oauth2/authorize?client_id=1210485141550669864&permissions=8&scope=bot",
