--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "bot": "node /src/index.js",
+    "bot": "node ./src/index.js",
     "deployCommands": "node src/deploy-commands.js "
   },
   "keywords": [],
